Fix paper height ish on mobile.

--- a/src/styles/_Paper.scss
+++ b/src/styles/_Paper.scss
@@ -2,10 +2,11 @@
 
 .Paper {
   // @include debugger();
-  height: 95vh;
+  height: 95%;
   width: 35rem;
   margin: 2.5vh auto;
-  max-width: 100vw;
+  max-width: 100%;
+  max-height: 95vh;
   overflow-x: hidden;
   position: relative;
   border-radius: 1.75rem;
@@ -22,7 +23,7 @@
 
   h1 {
     font-size: 1.05rem;
-    color: $theme-primary-v3;
+    color: $theme-primary-v4;
     border-radius: 1.35rem 1.35rem 0.2rem 0.2rem;
     text-align: center;
     margin-top: 0.5rem;
@@ -37,7 +38,8 @@
   position: relative;
   overflow-y: auto;
   background: inherit;
-  height: calc(100% - 9rem);
+  max-height: calc(100% - 8.75rem);
+  height: 100%;
   width: calc(100% + 2rem);
   margin: 0 -1rem;
   border-top: 0.0625rem solid $theme-primary-v7;
