--- a/src/styles/misc.scss
+++ b/src/styles/misc.scss
@@ -5,7 +5,7 @@
 html,
 body,
 #root {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
   font-size: 1rem;
