--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -4,6 +4,7 @@
     height: 100%;
     border-radius: 0;
     margin: 0;
+    max-height: 100vh;
 
     h1 {
       border-radius: 0.25rem;
